# eget

./: Cargo.toml  eget.go  flags.go  log.go
src/: app.rs  log.rs  main.rs
