[package]
name = "eget-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"         # ratatui terminal UI
crossterm = "0.28"       # terminal event/input backend
dirs = "5.0"             # to get XDG dirs
chrono = { version = "0.4", features = ["serde"] } # parse timestamps
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
